# tokenprobe

./: .dockerignore  .gitignore  01_PRD.md  02_TRD.md  03_BUILD_PHASES.md  04_NEXT_PHASES.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  self-test.yml
backend/: main.py  schemas.py  services.py  test_api.py
backend/routers/: analysis.py  batch.py  config.py  health.py
docs/: HOW_TO_RUN.md  MODULE_REFERENCE.md  PRESENTATION.md
examples/: active_checks.sh  basic_audit.sh  ci_integration.sh  github-action-example.yml  tokenprobe.toml  tokens.json  tokens.txt
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FindingCard.tsx  Navbar.tsx  NfIcon.tsx  ResultsPanel.tsx  ScrollToTop.tsx  ThemeModal.tsx  TokenDecoder.tsx  TokenInput.tsx
frontend/src/components/docs/: AlgorithmsSection.tsx  AnatomySection.tsx  ApiSection.tsx  ArchitectureSection.tsx  BestPracticesSection.tsx  CICDSection.tsx  ChecksSection.tsx  ClaimsSection.tsx  Code.tsx  CodeBlock.tsx  ConfigSection.tsx  DocsCard.tsx  FAQSection.tsx  GlossarySection.tsx  JWESection.tsx  NfIcon.tsx  OverviewSection.tsx  SamplesSection.tsx  SectionHeader.tsx  SeverityTag.tsx  StorageSection.tsx  SubHead.tsx  TOC.tsx  ThemesSection.tsx  UsageSection.tsx  VulnSection.tsx  WebSection.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx
frontend/src/hooks/: useAnalysis.ts  useApi.ts  useHash.ts  useRecentTokens.ts  useTheme.ts
frontend/src/pages/: AboutPage.tsx  BatchPage.tsx  ConfigPage.tsx  DocsPage.tsx  HomePage.tsx
frontend/src/samples/: tokens.ts
frontend/src/styles/: base.css  components.css  themes.css
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  errors.tsx  severity.ts
jwtcheck/: __init__.py  cli.py  logging_config.py
jwtcheck/core/: __init__.py  batch.py  config.py  decoder.py  findings.py  jwe_decoder.py  unified_decoder.py  validation.py  wordlist.py
jwtcheck/core/checks/: active.py  base.py  engine.py  jwe.py  static.py
jwtcheck/report/: json_report.py  text_report.py
jwtcheck/tests/: __init__.py  test_active_checks.py  test_batch.py  test_check_engine.py  test_checks.py  test_cli.py  test_config.py  test_decoder.py  test_findings.py  test_jwe.py  test_logging.py  test_reports.py
jwtcheck/tests/fixtures/: tokens.py
scripts/: check_env.sh  dev.sh  install.sh
tokenprobe/: __init__.py  cli.py  logging_config.py
tokenprobe/core/: batch.py  config.py  decoder.py  findings.py  jwe_decoder.py  unified_decoder.py  validation.py
tokenprobe/core/checks/: __init__.py  active.py  base.py  engine.py  jwe.py  static.py
tokenprobe/report/: __init__.py  json_report.py  text_report.py
tokenprobe/tests/: __init__.py  test_active_checks.py  test_batch.py  test_check_engine.py  test_checks.py  test_cli.py  test_config.py  test_decoder.py  test_findings.py  test_jwe.py  test_logging.py  test_reports.py
tokenprobe/tests/fixtures/: jwe_tokens.py  tokens.py
