[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jwtcheck"
version = "1.0.0"
description = "JWT Misconfiguration Checker - Audit JWT tokens for security issues"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "JWT Misconfig Checker Team" }
]
keywords = ["jwt", "security", "authentication", "token", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
jwtcheck = "jwtcheck.cli:main"

[project.urls]
Homepage = "https://github.com/jwtcheck/jwtcheck"
Repository = "https://github.com/jwtcheck/jwtcheck"
Issues = "https://github.com/jwtcheck/jwtcheck/issues"

[tool.hatch.build.targets.wheel]
packages = ["jwtcheck"]

[tool.pytest.ini_options]
testpaths = ["jwtcheck/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]
