[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenprobe"
version = "1.0.0"
description = "TokenProbe - Audit JWT tokens for security misconfigurations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "JWT Misconfig Checker Team" }
]
keywords = ["jwt", "security", "authentication", "token", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
tokenprobe = "tokenprobe.cli:main"

[project.urls]
Homepage = "https://github.com/sumitjhaa/tokenprobe"
Repository = "https://github.com/sumitjhaa/tokenprobe"
Issues = "https://github.com/sumitjhaa/tokenprobe/issues"

[tool.hatch.build.targets.wheel]
packages = ["tokenprobe"]

[tool.pytest.ini_options]
testpaths = ["tokenprobe/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]
